@alvesRenan - caminho do dataset ajustado

--- a/visualizacoes_base_integracao.ipynb
+++ b/visualizacoes_base_integracao.ipynb
@@ -39,8 +39,6 @@
         "id": "tlVsYabPG5Sx"
       },
       "source": [
-        "drive_path = 'drive/My Drive/Colab Notebooks/data_covid/%s'\n",
-        "\n",
         "cols = ['dt_nasc_g', 'logradouro_g', 'bairro_g', 'municipio_residencia_g',\n",
         "       'houve_internacao_s', 'dt_recebimento_g', 'dt_liberacao_g',\n",
         "       'resultado_g', 'suporte_ventilatorio_s', 'classif_gestante_s',\n",
@@ -60,7 +58,7 @@
         "id": "Mvx_RyoVHHI3"
       },
       "source": [
-        "df = pd.read_csv( drive_path % 'cleaned_base_integracao.csv', usecols=cols)\n",
+        "df = pd.read_csv( 'datasets/cleaned_base_integracao.csv', usecols=cols)\n",
         "df[cols]\n",
         "\n",
         "df.drop( df[ df['resultado_g'] == 'Inconclusivo' ].index, inplace=True )\n",
